# ai-agents-hackathon-2026-chicha-core

./: .gitignore  README.md
.agent/: ARCHITECTURE.md
.agent/skills/bhashalens-spec-generator/: SKILL.md
bhashalens_app/: PROJECT_STRUCTURE.md  pubspec.yaml
bhashalens_app/android/app/: build.gradle.kts
bhashalens_app/lib/: main.dart
bhashalens_app/lib/core/: ocr_extractor_io.dart
bhashalens_app/lib/models/: conversation_message.dart
bhashalens_app/lib/services/: translation_engine_example.dart
bhashalens_app/lib/widgets/: accessibility_wrapper.dart  backend_indicator.dart  backend_indicator_widget.dart  common_bottom_nav_bar.dart  export_data_dialog.dart  main_bottom_navbar.dart
bhashalens_app/native/ct2_bridge/: CMakeLists.txt
bhashalens_app/native/ct2_bridge/ios/: ct2_bridge.podspec
bhashalens_app/native/ct2_bridge/src/: ct2_bridge.cpp  ct2_bridge.h  sentencepiece_tokenizer.cpp
bhashalens_app/test/: ml_kit_translation_test.dart  rule_engine_test.dart  template_service_test.dart
docs/: BhashaLens_Architecture_Blueprint.md  OFFLINE_TRANSLATION_ARCHITECTURE.md
ml_pipeline/: requirements.txt
ml_pipeline/scripts/: convert_to_ct2.py  evaluate_bleu.py  export_student.py  generate_pdf.py  generate_synthetic.py  prepare_training_data.py  prune_vocabulary.py  slice_embeddings.py  student_config.py  train_distilled.py
samvadai/: README.md  pubspec.yaml
samvadai/lib/: main.dart
samvadai/linux/: CMakeLists.txt
samvadai/test/: widget_test.dart
samvadai/web/: index.html  manifest.json
samvadai/windows/: CMakeLists.txt
(+107 files in other folders)
